@@ -7,6 +7,7 @@ FEB 24 2021
         KeyListener has been added. This allows for scripts to implement actions on key presses.
         Pressing F12 will show ::bothelp
         Pressing F11 will stop the current running script and open the load script window.
+        Anti logout -- when the 'standing in one spot for too long' message comes up, your character will move.
 
         New IdleScript interrupt - keyPressInterrupt
         Implemented SBot function - KeyPress(int keycode)
